<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_10sdp"
    android:background="@drawable/item_bg"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_20sdp"
    android:paddingVertical="@dimen/_10sdp">


    <TextView
        android:id="@+id/tvGitName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/intialize_git"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14ssp" />


    <TextView
        android:id="@+id/tvGitDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/git_desc"
        android:textColor="@color/colorGreyText"
        android:textSize="@dimen/_10ssp" />


    <TextView
        android:id="@+id/tvGitCommand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/round_bg_dark"
        android:drawablePadding="@dimen/_5sdp"
        android:fontFamily="@font/roboto_medium"
        android:paddingHorizontal="@dimen/_5sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/git_init"
        android:textColor="@color/colorYellow"
        android:textSize="@dimen/_12ssp"
        app:drawableStartCompat="@drawable/ic_code"
        app:drawableTint="@color/colorYellow" />

</LinearLayout>
