<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_10sdp"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_20sdp"
    android:paddingVertical="@dimen/_10sdp">


    <TextView
        android:id="@+id/tvLessonDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/lesson_description"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14ssp" />


    <TextView
        android:id="@+id/tvLessonExplanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/lesson_explanation"
        android:textColor="@color/colorGreyText"
        android:textSize="@dimen/_10ssp" />


    <TextView
        android:id="@+id/tvLessonExample"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/round_bg_dark"
        android:drawablePadding="@dimen/_5sdp"
        android:fontFamily="@font/roboto_medium"
        android:paddingHorizontal="@dimen/_5sdp"
        android:paddingVertical="@dimen/_5sdp"
        android:text="@string/lesson_example"
        android:textColor="?attr/colorAccent"
        android:textSize="@dimen/_12ssp"
        app:drawableStartCompat="@drawable/ic_code"
        app:drawableTint="?attr/colorAccent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="?attr/colorAccent" />

</LinearLayout>
