<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_50sdp"
    android:background="?attr/colorPrimaryVariant"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingVertical="@dimen/_20sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="@dimen/_100sdp">

        <ImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/app_logo" />
    </androidx.cardview.widget.CardView>

    <!--  Name -->
    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp" />

    <!-- App Version -->
    <TextView
        android:id="@+id/tvAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/app_version"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_11sdp" />

    <!--    notification option-->
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_15sdp"
        android:drawableStart="@drawable/ic_notification"
        android:drawableTint="?attr/colorAccent"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/daily_notification"
        android:textColor="@color/colorWhite"
        app:switchPadding="@dimen/_10sdp"
        app:thumbTint="?attr/colorAccent" />

</LinearLayout>