<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical"
    tools:context=".fragments.AboutUsFragment">

    <TextView
        android:id="@+id/tvAboutDeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        android:drawablePadding="@dimen/_5sdp"
        android:fontFamily="@font/rubik_medium"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/about_developer"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_16ssp"
        app:drawableStartCompat="@drawable/ic_left_arrow"
        app:drawableTint="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:background="@color/colorGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAboutDeveloper" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_40sdp">

            <!--            profile pic-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/box_round_border"
                android:padding="@dimen/_10sdp">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardCornerRadius="200dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/developer" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <!--            name-->
            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/vishal_singh"
                android:textColor="@color/colorGreen"
                android:textSize="@dimen/_18ssp" />

            <!--            bio-->
            <TextView
                android:id="@+id/tvBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/roboto_medium"
                android:paddingHorizontal="@dimen/_20sdp"
                android:text="@string/bio"
                android:textAlignment="center"
                android:textColor="#A8A8A8"
                android:textSize="@dimen/_11ssp" />

            <!--            follow me-->
            <TextView
                android:id="@+id/tvFollow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/follow_me"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_16ssp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/box_stroke_round_gray"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/_15sdp"
                android:paddingVertical="@dimen/_15sdp">

                <ImageView
                    android:id="@+id/btnTwitter"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:src="@drawable/twitter" />

                <ImageView
                    android:id="@+id/btnGithub"
                    android:layout_width="@dimen/_34sdp"
                    android:layout_height="@dimen/_34sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:src="@drawable/github" />

                <ImageView
                    android:id="@+id/btnInstagram"
                    android:layout_width="@dimen/_34sdp"
                    android:layout_height="@dimen/_34sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:src="@drawable/instagram" />

                <ImageView
                    android:id="@+id/btnLinkedin"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:src="@drawable/linkedin" />

            </LinearLayout>

            <!--            follow me-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/credits"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:id="@+id/tvCredits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/box_stroke_round_gray"
                android:fontFamily="@font/roboto_medium"
                android:padding="@dimen/_10sdp"
                android:text="Icons made by Freepik from www.flaticon.com"
                android:textColor="#A8A8A8"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>